# genius-dashboard

./: .eslintrc.cjs  .gitignore  .prettierrc  LICENSE  README.md  index.html  next.config.js  package.json  pnpm-lock.yaml  release.sh  release.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx  vite.env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: log.rs  main.rs
src/components/BoardSwitcher/: BoardSwitcher.tsx  index.ts
src/components/ColorProvider/: ColorProvider.tsx  index.ts
src/components/Dashboard/: Dashboard.tsx  DisplaySimply.tsx  EditWidgetModal.tsx  ExtraProps.tsx  OptionsForm.tsx  SourcesForm.tsx  WidgetBase.tsx  assertions.ts  index.ts
src/components/Dashboard/SelectWidgetModal/: ConfigureWidgetModal.tsx  SelectWidgetModal.tsx  WidgetExample.tsx  index.ts
src/components/Dashboard/widgets/: Camera.tsx  Command.tsx  Controller.tsx  Editable.tsx  SimpleDisplay.tsx  SmartDashboardChooser.tsx  Subsystem.tsx  Toggle.tsx
src/components/Form/: ControllableSelect.tsx  ControlledNumberInput.tsx
src/components/Layout/: ColorPicker.tsx  Header.tsx  Layout.tsx  Menu.tsx  ThemeSwitch.tsx
src/components/Layout/Menu/: BoardButton.tsx  EditBoardModal.tsx  Menu.tsx  SettingsForm.tsx
src/components/Tree/: Tree.tsx
src/pages/: _app.tsx  _document.tsx  index.tsx
src/stores/: boardStore.ts  migrations.ts  settingsStore.ts  topicsStore.ts
src/types/: Message.ts  Topic.ts  utils.ts
src/utils/: Result.ts  client.tsx  consoleProxy.ts  invokeResult.ts  modals.tsx  tauriHooks.ts  teamNumberToIP.ts  topicUtils.ts
