[package]
name = "genius-dashboard"
version = "0.0.2"
description = "A Tauri App"
authors = ["Isaiah Gamble <itg.2048@gmail.com>"]
license = "MIT"
repository = "https://github.com/tsar-boomba/genius-dashboard"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["fs-exists", "fs-read-file", "fs-write-file", "shell-open"] }
network-tables = { version = "0.0.8",  features = ["client-v4"] }
tokio = { version = "1", default-features = false, features = ["sync"] }
once_cell = { version = "1.17.0", features = ["parking_lot"] }
walkdir = "2.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time", "smallvec", "parking_lot"] }
time = { version = "0.3", features = ["macros", "parsing"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
